// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`test Sider should render correctly 1`] = `
<div>
  <div
    class="sider class"
  >
    Sider
  </div>
</div>
`;

exports[`test Sider should render correctly 2`] = `
<div>
  <div
    class="sider desktop mobile windows class class2"
  >
    Sider
  </div>
</div>
`;
